Add three pricing tiers: Small (€49), Medium (€99), and Callcenter (on demand)

--- a/index.html
+++ b/index.html
@@ -39,18 +39,56 @@
   <section class="pricing" id="pricing">
     <div class="container">
       <h2>Eenvoudige Prijzen</h2>
-      <div class="pricing-card">
-        <div class="price-main">
-          <span class="price-amount">€49</span>
-          <span class="price-period">/maand</span>
+      <div class="pricing-grid">
+        <!-- Small Tier -->
+        <div class="pricing-card">
+          <div class="price-tier">Small</div>
+          <div class="price-main">
+            <span class="price-amount">€49</span>
+            <span class="price-period">/maand</span>
+          </div>
+          <div class="price-detail">+ €0,25 per gebelde minuut</div>
+          <ul class="price-features">
+            <li>1 telefoonnummer</li>
+            <li>1 gelijktijdige oproep</li>
+            <li>24/7 bereikbaar</li>
+            <li>Perfect Nederlands</li>
+            <li>Binnen 1 dag live</li>
+          </ul>
         </div>
-        <div class="price-detail">+ €0,25 per gebelde minuut</div>
-        <ul class="price-features">
-          <li>24/7 bereikbaar</li>
-          <li>Perfect Nederlands</li>
-          <li>Eigen telefoonnummer</li>
-          <li>Binnen 1 dag live</li>
-        </ul>
+        
+        <!-- Medium Tier -->
+        <div class="pricing-card pricing-featured">
+          <div class="price-tier">Medium</div>
+          <div class="price-main">
+            <span class="price-amount">€99</span>
+            <span class="price-period">/maand</span>
+          </div>
+          <div class="price-detail">+ €0,25 per gebelde minuut</div>
+          <ul class="price-features">
+            <li>1 telefoonnummer</li>
+            <li>3 gelijktijdige oproepen</li>
+            <li>24/7 bereikbaar</li>
+            <li>Perfect Nederlands</li>
+            <li>Binnen 1 dag live</li>
+          </ul>
+        </div>
+        
+        <!-- Callcenter Tier -->
+        <div class="pricing-card">
+          <div class="price-tier">Callcenter</div>
+          <div class="price-main">
+            <span class="price-amount">Op aanvraag</span>
+          </div>
+          <div class="price-detail">Aangepaste tarieven</div>
+          <ul class="price-features">
+            <li>Meerdere lijnen</li>
+            <li>5+ gelijktijdige oproepen</li>
+            <li>24/7 bereikbaar</li>
+            <li>Perfect Nederlands</li>
+            <li>Persoonlijke ondersteuning</li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
