--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
           </div>
           <div class="price-detail">Aangepaste tarieven</div>
           <ul class="price-features">
-            <li>Meerdere lijnen</li>
+            <li>Meerdere telefoonnummers</li>
             <li>5+ gelijktijdige oproepen</li>
+            <li>Ook uitgaande oproepen</li>
             <li>24/7 bereikbaar</li>
             <li>Perfect Nederlands</li>
             <li>Persoonlijke ondersteuning</li>
