Update pricing description, rename Sophie to Luna, add new customer service agent Sophie

--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
             <span class="price-amount">€49</span>
             <span class="price-period">/maand</span>
           </div>
-          <div class="price-detail">+ €0,25 per gebelde minuut</div>
+          <div class="price-detail">+ €0,25 per gebelde minuut • 24/7 bereikbaar, betaal alleen per gebelde minuut</div>
           <ul class="price-features">
             <li>1 telefoonnummer</li>
             <li>1 gelijktijdige oproep</li>
-            <li>24/7 bereikbaar</li>
             <li>Perfect Nederlands</li>
             <li>Binnen 1 dag live</li>
           </ul>
@@ -64,11 +63,10 @@
             <span class="price-amount">€99</span>
             <span class="price-period">/maand</span>
           </div>
-          <div class="price-detail">+ €0,25 per gebelde minuut</div>
+          <div class="price-detail">+ €0,25 per gebelde minuut • 24/7 bereikbaar, betaal alleen per gebelde minuut</div>
           <ul class="price-features">
             <li>1 telefoonnummer</li>
             <li>3 gelijktijdige oproepen</li>
-            <li>24/7 bereikbaar</li>
             <li>Perfect Nederlands</li>
             <li>Binnen 1 dag live</li>
           </ul>
@@ -85,7 +83,6 @@
             <li>Meerdere telefoonnummers</li>
             <li>5+ gelijktijdige oproepen</li>
             <li>Ook uitgaande oproepen</li>
-            <li>24/7 bereikbaar</li>
             <li>Perfect Nederlands</li>
             <li>Persoonlijke ondersteuning</li>
           </ul>
