Move 24/7 description from pricing to hero section, clean up pricing details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section class="hero">
     <div class="container">
       <h1>Uw AI-telefonist. Altijd bereikbaar.</h1>
-      <p class="hero-sub">Slimme telefoonagenten die oproepen beantwoorden, afspraken boeken en klanten helpen — 24/7, in perfect Nederlands.</p>
+      <p class="hero-sub">Slimme telefoonagenten die oproepen beantwoorden, afspraken boeken en klanten helpen, in perfect Nederlands. 24/7 bereikbaar, betaal alleen per gebelde minuut.</p>
     </div>
   </section>
 
@@ -47,7 +47,7 @@
             <span class="price-amount">€49</span>
             <span class="price-period">/maand</span>
           </div>
-          <div class="price-detail">+ €0,25 per gebelde minuut • 24/7 bereikbaar, betaal alleen per gebelde minuut</div>
+          <div class="price-detail">+ €0,25 per gebelde minuut</div>
           <ul class="price-features">
             <li>1 telefoonnummer</li>
             <li>1 gelijktijdige oproep</li>
@@ -63,7 +63,7 @@
             <span class="price-amount">€99</span>
             <span class="price-period">/maand</span>
           </div>
-          <div class="price-detail">+ €0,25 per gebelde minuut • 24/7 bereikbaar, betaal alleen per gebelde minuut</div>
+          <div class="price-detail">+ €0,25 per gebelde minuut</div>
           <ul class="price-features">
             <li>1 telefoonnummer</li>
             <li>3 gelijktijdige oproepen</li>
