Update Callcenter pricing format and improve agent avatars for their domains

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         <div class="pricing-card">
           <div class="price-tier">Callcenter</div>
           <div class="price-main">
-            <span class="price-amount">Op aanvraag</span>
+            <span class="price-amount">€ tbd</span>
+            <span class="price-period">/maand</span>
           </div>
           <div class="price-detail">Aangepaste tarieven</div>
           <ul class="price-features">
